@@ -1,5 +1,11 @@
 2008-02-11  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/SourceEditorView.cs,
+	  MonoDevelop.SourceEditor/SourceEditorOptions.cs: Some changes for the
+	  text editor.
+
+2008-02-11  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
 	  MonoDevelop.SourceEditor/SourceEditorView.cs: Optimized/Refactored the
 	  text editor.
